use pre-wrap to fix regression with overflow-wrap

--- a/pd/nw/css/c64.css
+++ b/pd/nw/css/c64.css
@@ -166,7 +166,7 @@ mark.console_find_highlighted {
     /* box-shadow: inset 1px 0px 0px 1px #000; */
     color: #a49aea; /* text color */
     background-color: transparent;
-    white-space: pre;
+    white-space: pre-wrap;
     overflow-wrap: break-word;
     -webkit-margin-before: 0px;
 }
