--- a/pd/nw/css/strongbad.css
+++ b/pd/nw/css/strongbad.css
@@ -168,7 +168,7 @@ mark.console_find_highlighted {
     /* box-shadow: inset 1px 0px 0px 1px #000; */
     color: #4bd046;
     background-color: transparent;
-    white-space: pre;
+    white-space: pre-wrap;
     overflow-wrap: break-word;
     -webkit-margin-before: 0px;
 }
