--- a/pd/nw/css/subdued.css
+++ b/pd/nw/css/subdued.css
@@ -167,7 +167,7 @@ mark.console_find_highlighted {
     padding: 3px 2px 3px 2px;
     /* box-shadow: inset 1px 0px 0px 1px #000; */
     background-color: transparent;
-    white-space: pre;
+    white-space: pre-wrap;
     overflow-wrap: break-word;
     -webkit-margin-before: 0px;
 }
