--- a/pd/nw/css/vanilla_inverted.css
+++ b/pd/nw/css/vanilla_inverted.css
@@ -172,7 +172,7 @@ mark.console_find_highlighted {
     /* box-shadow: inset 1px 0px 0px 1px #000; */
     color: white; /* text color */
     background-color: transparent;
-    white-space: pre;
+    white-space: pre-wrap;
     overflow-wrap: break-word;
     -webkit-margin-before: 0px;
 }
